2003-11-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::InitSlave): remove tk_library from the
	seeded auto_path.  Do not add OPT(library) to auto_path if it is "".

2003-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::EvalSocketClosed): use tk_messageBox instead
	of tk_dialog

2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (dir): use %9ld instead of %9d to support large files

2003-04-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::InitUI): WinCE code to resize the window to
	fit on the small screen

2003-03-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon::Retrieve): correct the check for tkcon version
	when retrieving from http.

2003-02-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (EvalCmd): set $:: (aka ${}) var to last command result.
	(EvalOther): use tk_messageBox instead of tk_dialog
	(Init): allow 'edit' to be overridden using OPT(edit)

2003-01-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: add tk appname alias in WWW plugin case.

2002-10-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tcl_unknown): allow ::namespace (:'s) to be
	recognized. (koloska)
	(MainInit): add option for overriding exit command.
	(InitUI): add option to control the wm protocol for WM_DELETE_WINDOW.

2002-10-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (InterpEval): correctly handle no args case.
	(New): autoload tbcload when it exists.

2002-06-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: call Init with eval to break out argv into args.

2002-06-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (Init): convert env(home) from 'C:' to 'C:/' if necessary.

2002-06-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: fixed Retrieve to use the proxy info (Thoyts).
	Added code so that tkcon.tcl can be sourced in and used like a
	quasi-package.  Once sourced, you can do a 'package require tkcon'